--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<spring-kafka.version>1.1.1.RELEASE</spring-kafka.version>
 		<kafka.version>0.10.2.0</kafka.version>
 		<quartz.version>2.3.0</quartz.version>
+		<netty.version>3.2.6.Final</netty.version>
 		<commons.lang.version>2.6</commons.lang.version>
 		<commons.fileupload.version>1.3.1</commons.fileupload.version>
 		<commons.io.version>2.5</commons.io.version>
@@ -114,6 +115,10 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
@@ -143,6 +148,12 @@
 			<artifactId>easyexcel</artifactId>
 			<version>${easyexcel.version}</version>
 		</dependency>
+	<!-- 	<dependency>
+		    <groupId>org.jboss.netty</groupId>
+		    <artifactId>netty</artifactId>
+		    <version>${netty.version}</version>
+		</dependency> -->
+
 		 <!-- springboot整合kafka -->
     	<!-- <dependency>
             <groupId>org.springframework.integration</groupId>
@@ -271,6 +282,12 @@
 		    <groupId>com.twilio.sdk</groupId>
 		    <artifactId>twilio-java-sdk</artifactId>
 		    <version>${twilio.version}</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>io.netty</groupId>
+		    		<artifactId>netty</artifactId>
+		    	</exclusion>
+		    </exclusions>
 		</dependency>
 		
 	</dependencies>
