--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,11 +24,11 @@ spring:
     resources: # 指定静态资源的路径
         static-locations: classpath:/static/,classpath:/views/
     redis:
-        open: false  # 是否开启redis缓存  true开启   false关闭
+        open: true  # 是否开启redis缓存  true开启   false关闭
         database: 0
-        host: localhost
-        port: 16379
-        password:       # 密码（默认为空）
+        host: sl-us-south-1-portal.1.dblayer.com
+        port: 15884
+        password: WQUQGOKVPAUHCGGS      # 密码（默认为空）
         timeout: 6000  # 连接超时时长（毫秒）
         pool:
             max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
@@ -51,6 +51,15 @@ spring:
           key-serializer: org.apache.kafka.common.serialization.StringSerializer
           value-serializer: org.apache.kafka.common.serialization.StringSerializer
           bootstrap-servers: kafka.p1.sbg.queue.ovh.net:9093
+    data:
+      elasticsearch:
+        user: admin
+        password: aaa
+        cluster-name: elasticsearch
+        cluster-nodes: localhost
+        local: false
+        repositories:
+          enable: true
 
 # Mybatis配置
 mybatis:
